# H.265Insight

./: .travis.yml  CMakeLists.txt  Flags.cmake  README.md  _config.yml  index.md
_includes/: header.html
apps/: CMakeLists.txt  i265.cpp
ci/: bitstreams.py  run.sh  testing.docker  toolchain.docker  travis.enc  travis.key.sha1
example/: arithmetic_decoder_state.log.lzma  coding_tree_unit.log.lzma  deblock_bs.log.lzma  deblock_d.log.lzma  deblock_edges.log.lzma  deblock_prediction_edges.log.lzma  deblock_transform_edges.log.lzma  deblocked_cb.log.lzma  deblocked_cr.log.lzma  deblocked_y.log.lzma  debug.log.lzma  decoded_cb.log.lzma  decoded_cr.log.lzma  decoded_picture_buffer.log.lzma  decoded_y.log.lzma  decoding_order_deblocked.yuv.lzma  decoding_order_outputNo-1_decodingNo1_POC1_Y_deblocked_416x240_420p_8_Y8C8.yuv.lzma  decoding_order_outputNo-1_decodingNo1_POC1_Y_reconstructed_416x240_420p_8_Y8C8.yuv.lzma  decoding_order_outputNo-1_decodingNo2_POC2_Y_decoded_416x240_420p_8_Y8C8.yuv.lzma  decoding_order_outputNo-1_decodingNo2_POC2_Y_predicted_416x240_420p_8_Y8C8.yuv.lzma  decoding_order_outputNo-1_decodingNo3_POC3_Y_predicted_416x240_420p_8_Y8C8.yuv.lzma  decoding_order_residuals.yuv.lzma  display_order_outputNo0_decodingNo0_POC0_Y_predicted_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo1_decodingNo1_POC1_Y_residuals_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo2_decodingNo2_POC2_Y_deblocked_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo2_decodingNo2_POC2_Y_reconstructed_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo2_decodingNo2_POC2_Y_residuals_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo3_decodingNo3_POC3_Y_reconstructed_416x240_420p_8_Y8C8.yuv.lzma  display_order_reconstructed.yuv.lzma  headers.log.lzma  inter_fractional_samples_interpolation_cb.log.lzma  inter_fractional_samples_interpolation_cr.log.lzma  inter_fractional_samples_interpolation_y.log.lzma  inter_predicted_samples_cb.log.lzma  inter_predicted_samples_cr.log.lzma  inter_predicted_samples_y.log.lzma  inter_weighted_samples_prediction_cb.log.lzma  inter_weighted_samples_prediction_cr.log.lzma  inter_weighted_samples_prediction_y.log.lzma  intra_adj_filtered_samples_y.log.lzma  (+55 more)
example/YUVs/: decoding_order_decoded.yuv.lzma  decoding_order_outputNo-1_decodingNo0_POC0_Y_reconstructed_416x240_420p_8_Y8C8.yuv.lzma  decoding_order_outputNo-1_decodingNo3_POC3_Y_residuals_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo0_decodingNo0_POC0_Y_deblocked_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo0_decodingNo0_POC0_Y_decoded_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo0_decodingNo0_POC0_Y_residuals_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo1_decodingNo1_POC1_Y_predicted_416x240_420p_8_Y8C8.yuv.lzma  display_order_outputNo3_decodingNo3_POC3_Y_decoded_416x240_420p_8_Y8C8.yuv.lzma  display_order_predicted.yuv.lzma
pages/: build.md  examples.md  introduction.md
src/: BitArray.h  BitIndex.h  BitMatrix.h  CMakeLists.txt  CRCHasher.h  ChecksumHasher.h  Coord.h  Counter.h  EnumUtils.h  Fwd.h  HEVC.h  HEVCDef.cpp  HEVCDef.h  HEVCLimits.h  Handle.h  MD5Hasher.h  Matrix.h  Optional.h  Pair.h  PicOrderCnt.h  Ptr.h  Range.h  Rect.h  StoreByValue.h  StreamAccessLayer.cpp  StreamAccessLayer.h  TerminationTools.cpp  TerminationTools.h  Tuple.h  VLA.h  VLM.h  VariadicTraits.h  Vector.h  log.cpp  log.h  runtime_assert.cpp  runtime_assert.h  units.cpp  units.h  utils.cpp  (+1 more)
src/Decoder/: CMakeLists.txt  Cmd.h  Context.cpp  Context.h  Extractor.cpp  Extractor.h  Fwd.h  ParserHooks.cpp  ParserHooks.h  Process.cpp  Process.h  SNUQueue.h  State.cpp  State.h
src/Decoder/Processes/: BlkEdgeD.h  BoundaryFilteringStrength.cpp  BoundaryFilteringStrength.h  CrossComponentPrediction.cpp  CrossComponentPrediction.h  CtbMask.h  Deblock.cpp  Deblock.h  DeblockEdges.cpp  DeblockEdges.h  DecodedPictureHash.cpp  DecodedPictureHash.h  FractionalSamplesBlock.h  FractionalSamplesInterpolation.cpp  FractionalSamplesInterpolation.h  Fwd.h  InterPrediction.cpp  InterPrediction.h  InterSamplesPrediction.cpp  InterSamplesPrediction.h  IntraAdjFiltering.cpp  IntraAdjFiltering.h  IntraAdjSamples.h  IntraAngularPrediction.cpp  IntraAngularPrediction.h  IntraChromaPredictionMode.cpp  IntraChromaPredictionMode.h  IntraDcPrediction.cpp  IntraDcPrediction.h  IntraLumaPredictionMode.cpp  IntraLumaPredictionMode.h  IntraPlanarPrediction.cpp  IntraPlanarPrediction.h  IntraRefSamplesSubstitution.cpp  IntraRefSamplesSubstitution.h  IntraSamplesPrediction.cpp  IntraSamplesPrediction.h  LumaBlockEdgeDecision.cpp  LumaBlockEdgeDecision.h  MvCollocated.cpp  (+39 more)
src/Structure/: AccessUnit.cpp  AccessUnit.h  CMakeLists.txt  CPB.cpp  CPB.h  CtbEdgeBS.h  CtbEdgeFlags.h  DPB.cpp  DPB.h  Fwd.h  PelBuffer.cpp  PelBuffer.h  Picture.cpp  Picture.h  PictureProperties.cpp  PictureProperties.h  RPL.cpp  RPL.h  RPS.cpp  RPS.h  RPSP.cpp  RPSP.h  ScalingFactor.cpp  ScalingFactor.h  ScalingList.cpp  ScalingList.h  Slice.cpp  Slice.h  Tile.cpp  Tile.h
src/Syntax/: AccessUnitDelimiterRbsp.cpp  AccessUnitDelimiterRbsp.h  Aggregator.cpp  Aggregator.h  ByteAlignment.cpp  ByteAlignment.h  CMakeLists.txt  CodingQuadTree.cpp  CodingQuadTree.h  CodingTreeUnit.cpp  CodingTreeUnit.h  CodingUnit.cpp  CodingUnit.h  CrossCompPred.cpp  CrossCompPred.h  Descriptor.cpp  Descriptor.h  Element.cpp  Element.h  ElementId.cpp  ElementId.h  Embedded.cpp  Embedded.h  EndOfBitstreamRbsp.cpp  EndOfBitstreamRbsp.h  EndOfSeqRbsp.cpp  EndOfSeqRbsp.h  FillerDataRbsp.cpp  FillerDataRbsp.h  Fwd.h  HrdParameters.cpp  HrdParameters.h  MvdCoding.cpp  MvdCoding.h  NalUnit.cpp  NalUnit.h  NalUnitHeader.cpp  NalUnitHeader.h  Parser.cpp  Parser.h  (+63 more)
src/Syntax/CABAD/: ArithmeticDecoder.cpp  ArithmeticDecoder.h  BinString.h  CtxId.cpp  CtxId.h  Debinarizer.cpp  Debinarizer.h  Descriptors.h  Fwd.h  Init.cpp  Init.h  State.cpp  State.h  Variable.cpp  Variable.h
src/Syntax/SEI/: BufferingPeriod.cpp  BufferingPeriod.h  DecodedPictureHash.cpp  DecodedPictureHash.h  Payload.cpp  Payload.h  PayloadId.h
src/Syntax/VLD/: Descriptors.cpp  Descriptors.h
test/: bitstreams.py
