CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)

PROJECT("H.265 Insight")

MESSAGE(STATUS "${PROJECT_NAME}: BEGIN")

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "debug" CACHE INTERNAL "Choose the type of build" FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

INCLUDE(Flags.cmake)

STRING(TOLOWER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE)

MESSAGE(STATUS "${PROJECT_NAME}: Build type: ${CMAKE_BUILD_TYPE}" )

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(apps)

MESSAGE(STATUS "${PROJECT_NAME}: END.")
