SET(
    decoder_H
    Context.h
    ParserHooks.h
    Process.h
    State.h
    Processes/BoundaryFilteringStrength.h
    Processes/CtbMask.h
    Processes/CrossComponentPrediction.h
    Processes/DecodedPictureHash.h
    Processes/Deblock.h
    Processes/DeblockEdges.h
    Processes/Fwd.h
    Processes/FractionalSamplesInterpolation.h
    Processes/FractionalSamplesBlock.h
    Processes/InterPrediction.h
    Processes/InterSamplesPrediction.h
    Processes/IntraAdjFiltering.h
    Processes/IntraAdjSamples.h
    Processes/IntraAngularPrediction.h
    Processes/IntraChromaPredictionMode.h
    Processes/IntraDcPrediction.h
    Processes/IntraLumaPredictionMode.h
    Processes/IntraPlanarPrediction.h
    Processes/IntraRefSamplesSubstitution.h
    Processes/IntraSamplesPrediction.h
    Processes/LumaBlockEdgeDecision.h
    Processes/MvCollocated.h
    Processes/MvCombinedBiPredMergeCandidate.h
    Processes/MvDerivation.h
    Processes/MvMergeMode.h
    Processes/MvPrediction.h
    Processes/MvPredictorCandidate.h
    Processes/MvSpatialMergeCandidate.h
    Processes/MvTemporalPrediction.h
    Processes/MvZeroMergeCandidate.h
    Processes/PictureOrderCount.h
    Processes/ProcessId.h
    Processes/QuantizationParameters.h
    Processes/Reconstruction.h
    Processes/ReferencePictureSet.h
    Processes/Residuals.h
    Processes/ReferencePictureList.h
    Processes/SampleAdaptiveOffset.h
    Processes/Transformation.h
    Processes/TransformCoeffsScaling.h
    Processes/WeightedSamplesPrediction.h)

SET(
    decoder_SRC
    Context.cpp
    ParserHooks.cpp
    Process.cpp
    State.cpp
    Processes/BoundaryFilteringStrength.cpp
    Processes/CrossComponentPrediction.cpp
    Processes/DecodedPictureHash.cpp
    Processes/Deblock.cpp
    Processes/DeblockEdges.cpp
    Processes/FractionalSamplesInterpolation.cpp
    Processes/InterPrediction.cpp
    Processes/InterSamplesPrediction.cpp
    Processes/IntraAdjFiltering.cpp
    Processes/IntraAngularPrediction.cpp
    Processes/IntraDcPrediction.cpp
    Processes/IntraChromaPredictionMode.cpp
    Processes/IntraLumaPredictionMode.cpp
    Processes/IntraPlanarPrediction.cpp
    Processes/IntraRefSamplesSubstitution.cpp
    Processes/IntraSamplesPrediction.cpp
    Processes/LumaBlockEdgeDecision.cpp
    Processes/MvCollocated.cpp
    Processes/MvCombinedBiPredMergeCandidate.cpp
    Processes/MvDerivation.cpp
    Processes/MvMergeMode.cpp
    Processes/MvPrediction.cpp
    Processes/MvPredictorCandidate.cpp
    Processes/MvSpatialMergeCandidate.cpp
    Processes/MvTemporalPrediction.cpp
    Processes/MvZeroMergeCandidate.cpp
    Processes/PictureOrderCount.cpp
    Processes/ProcessId.cpp
    Processes/QuantizationParameters.cpp
    Processes/Reconstruction.cpp
    Processes/ReferencePictureSet.cpp
    Processes/Residuals.cpp
    Processes/ReferencePictureList.cpp
    Processes/SampleAdaptiveOffset.cpp
    Processes/Transformation.cpp
    Processes/TransformCoeffsScaling.cpp
    Processes/WeightedSamplesPrediction.cpp
    Processes/WeightedSamplesPrediction.cpp)

ADD_LIBRARY(decoder STATIC ${decoder_SRC})
TARGET_LINK_LIBRARIES(decoder syntax structure)
